--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 .ipynb_checkpoints/Untitled-checkpoint.ipynb
 .ipynb_checkpoints/EDA-checkpoint.ipynb
+.ipynb_checkpoints/Modelling-checkpoint.ipynb
